chore: cleanup src